[package]
name = "slacker-slayer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
once_cell = "1.19.0"
reqwest = { version = "0.11.24", features = ["json"] }
serde = "1.0.197"
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-runtime = "0.49.0"
shuttle-serenity = "0.49.0"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
